# wikipedia-python

./: .gitignore  pyproject.toml
src/wikipedia_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
